--- a/css/slider.css
+++ b/css/slider.css
@@ -115,13 +115,14 @@
 
 @media (max-width: 768px) {
     .slider {
-        aspect-ratio: 4/3;
+        aspect-ratio: 1/1;
         margin: 0;
-        width: 100%;
         border-radius: 0;
+        height: auto;
     }
 
     .slides {
+        width: 100%;
         height: 100%;
     }
 
@@ -129,6 +130,10 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        object-position: center;
+        position: absolute;
+        top: 0;
+        left: 0;
     }
 
     .prev, .next {
